--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=E2-226B-NOM
+application.title=E3-226B-FLUX-NOM
 application.vendor=ramalhom
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,10 +29,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/E2-226B-NOM.jar
+dist.jar=${dist.dir}/E3-226B-FLUX-NOM.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/E2-226B-NOM
+dist.jlink.output=${dist.jlink.dir}/E3-226B-FLUX-NOM
 endorsed.classpath=
 excludes=
 includes=**
@@ -72,8 +72,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=E2-226B-NOM
-main.class=e2_226b.Application
+jlink.launcher.name=E3-226B-FLUX-NOM
+main.class=e3_226b.Application
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
